Fixes some spacing issues and temporary settings of variables.

--- a/src/app/synteny-browser/block-view-filter/block-view-filter.component.scss
+++ b/src/app/synteny-browser/block-view-filter/block-view-filter.component.scss
@@ -48,8 +48,6 @@ clr-icon { margin-left: 5px; }
 
 .datagrid .datagrid-cell { font-size: 0.45rem; }
 
-img {
-  width: 100%;
-}
+img { width: 100%; }
 
 #diagram { margin-top: 5vh; }
